--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ThePackingAlgorithmCode.tex
@@ -6,24 +6,19 @@ To understand the different methods, the algorithm as described in section \ref{
 \subsection{Classes}
 To handle the information and functions needed to handle suitcases and items to pack, the classes luggage and luggage\_item have been made. They do both inherit from the class Cube\_Shape, with the variables width, depth, height and name. The Cube\_Shape class provides the information of a cube, which both suitcases and items can be seen as.
 \subsubsection{The Class "luggage"}
-The class diagram of the luggage class can be seen on Figure \ref{fig:lugclass}. There are a lot of private fields (starting with "\_") which can be accessed through properties. It contains all the values needed: the maximum weight, the weight of the suitcase etc. It also contains a set of methods which is used through the packing process. The properties which should only be accessed in the methods in the class has a private setter, so functions outside the class can only get the value, and not change the properties by a mistake. An example of this is the property "weight", which indicates the total weight of the items in the suitcase and the suitcase' weight. This value should only be set by the class it self in the methods placing an item.
-
-\figur{0.3}{LuggageClass.jpg}{The class diagram of the luggage class}{fig:lugclass}
-
-As seen on Figure \ref{fig:lugclass} there are a set of methods in the class "luggage". These methods provide the necessary functions to handle the suitcase while packing.
-
+In the class "luggage" there are a lot of private fields (starting with "\_") which can be accessed through properties. It contains all the values needed: the maximum weight, the weight of the suitcase etc. It also contains a set of methods which is used through the packing process. The properties which should only be accessed in the methods in the class has a private setter, so functions outside the class can only get the value, and not change the properties by a mistake. An example of this is the property "weight", which indicates the total weight of the items in the suitcase and the suitcase' weight. This value should only be set by the class it self in the methods placing an item.
+In the class "luggage" there us a set of methods. These methods provide the necessary functions to handle the suitcase while packing.
 \subsubsection{The class "luggage\_item"}
-The class luggage\_item is for the items to pack in the luggage. The class diagram can be seen on Figure \ref{fig:lugitemclass}. As in the luggage class, this class has some variables, which can only be accessed through properties. Those properties, which should only be set inside the class have a private setter. There are also a private method "Rotate\_Lug\_Item", which should only be called inside the class.
-\figur{0.3}{LuggageItemClass.jpg}{The class diagram of the luggage\_item class}{fig:lugitemclass}
-\subsubsection{Using the Classes}
-The luggage class and the luggage\_item class is used in the program with a list. These lists of the classes is made by the initialization of the program as seen on Listing \ref{lst:listini}, and is passed through to the other form. These lists contains the information of every suitcase, item and the result of the packing.
-\kode{The initialization of the list containing the suitcases and luggages. (From the Main form)}{listini}{ListOfClass.txt}
+The class luggage\_item is for the items to pack in the luggage. As in the luggage class, this class has some variables, which can only be accessed through properties. Those properties, which should only be set inside the class have a private setter. There are also a private method "Rotate\_Lug\_Item", which should only be called inside the class.
+
 \subsection{Description of the Code}
 The algorithm to pack has been developed from the flowchart seen on figure \ref{fig:flowalgo}. The following will describe the code and the extensions of the flowchart.
 \subsubsection{Reset and Sorting}
-As seen on the Figure \ref{fig:flowalgo}, the first thing which is done is to sort the suitcases and the items. Before sorting the lists of suitcases and luggages, it resets the values which were changed when packing. This is to ensure the algorithm has the right values if the user pack it twice. 
+As seen on the Figure \ref{fig:flowalgo}, the first thing which is done is to sort the suitcases and the items. Before sorting the lists of suitcases and luggages, it resets the values which were changed when packing. This is to ensure the algorithm has the right values if the user pack it twice.
 
-The reset methods for the items and the suitcases are in their respective classes as seen on Figure \ref{fig:lugclass} and Figure \ref{fig:lugitemclass}. A loop will call the reset methods in all suitcases and items in the lists. This is for example to reset the values of where there are saved items in the luggage. The items and luggage is also rotated so the luggage has the longest side as width as seen on Listing \ref{lst:lugrotate}. This is done, so the algorithm packs as optimal as possible. The items is likewise rotated, so the height is the smallest side. This will ensure that the algorithm will try to pack items lying, and not upright.
+The reset methods for the items and the suitcases are in their respective classes. A loop will call the reset methods in all suitcases and items in the lists. This is for example to reset the values of where there are saved items in the luggage. The items and luggage is also rotated so the luggage has the longest side as width. The rotate function can be seen on Listing \ref{lst:lugrotate}. Through the three "if" statement the program checks which of the values that are the biggest.
+In the first "if" statement the program checks if depth is bigger than width. If depth is bigger than width they are swap around. In the second "if" statement the program checks if height is bigger than depth. If height is bigger than depth they are swap around. The first "if" statement is then used again because depth could have gotten bigger than width. Through this process the width should have the biggest value by now.
+This is done, so the algorithm packs as optimal as possible. The items is likewise rotated, so the height is the smallest side. This will ensure that the algorithm will try to pack items lying, and not upright.
 \kode{The code to rotate the luggage until the longest side is the width. The rotation is made by switching the values of 2 sides. (From the luggage class in the Main form.)}{lugrotate}{RotateLug.txt}
 The method to sort the luggages and items will sort them by size, so the largest items will be attempted to be packed first in the biggest suitcases. This will give a better packing, because the smallest items are easier to fit than the big items.
 \subsubsection{Weight Distribution}
